# Year2-PacMan

./: CMakeLists.txt  README.md
Data/tiledProject/: Map.tmx  Tileset1.tsx
src/: Coin.cpp  Coin.h  Enemy.cpp  Enemy.h  Game.cpp  Game.h  Player.cpp  Player.h  ResourceHandler.cpp  ResourceHandler.h  main.cpp
src/Menus/: GameOverMenu.cpp  GameOverMenu.h  MainMenu.cpp  MainMenu.h
